Clip alternate urls to avoid wrapping

--- a/web/gui/main.css
+++ b/web/gui/main.css
@@ -569,7 +569,7 @@ body.modal-open {
 }
 
 #my-netdata-dropdown-content .agent-item :nth-child(2) {
-    min-width: 320px;
+    min-width: 420px;
     line-height: 14px;
 }
 
